# vectordb

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ci.yaml
include/: constants.h  faiss_index.h  http_server.h  index_factory.h  logger.h
src/: faiss_index.cpp  http_server.cpp  index_factory.cpp  logger.cpp  main.cpp
tests/: CMakeLists.txt
